added player, gground, movement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <script src="p5.min.js"></script>
   <script src="script.js"></script>
   <link href="reset.css" type="text/css" rel="stylesheet">
+  <script src="./modules/Ground.js"></script>
+  <script src="./modules/Player.js"></script>
 </head>
 <body>
 </body>
